--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -1,22 +1,39 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 #logo {
-  text-shadow: 4px 4px 8px white;
+  text-shadow: 4px 4px 8px rgb(46, 139, 216);
   color: #0B2240;
+  margin-top: 15%;
+}
+#home-logo {
+  text-shadow: 4px 4px 8px rgb(46, 139, 216);
+  color: #0B2240;
+}
+hr {
+  color: red;
+  margin: 0 5%;
+  background: yellow;
 }
 #home-dropdown {
   color: black;
-  margin: 5%;
+  /* margin: 5%; */
+  display: inline-flex;
+  justify-content: center;
+  width: 100%;
 }
 #home-dropdown select {
-  background-color:#15437F;
-  color: white;
+  color:#15437F;
+  background: white;
+  border:solid  #0B2240 5px;
+  border-radius: 5px;
 }
 .welcome-div {
   height: 500px;
-  max-height: 500px;
+  max-height: 400px;
   background-image: url("../image/repair1.jpg");
-}
-.welcome-div img {
-  height: 500px;
+  padding-top: 10%;
 }
 .nav {
   list-style: none;
@@ -148,6 +165,10 @@ body {
   padding: 5px;
   text-align: center;
 }
+.container form {
+  margin-top: 3%;
+  margin-bottom: 30%;
+}
 #request-header {
   margin-left: 5%;
   margin-top: 5%;
@@ -180,6 +201,9 @@ img {
   margin-right: 5%;
   background-color: #0B2240;
   color: white;
+  padding: 3px;
+  padding-left: 5px;
+  border-radius: 5px;
 }
 .description-btn {
   display: flex;
@@ -187,16 +211,33 @@ img {
 }
 .description-btn select, .description-btn button {
   margin-top: 20px;
+  margin-bottom: 5em;
   border-radius: 6px;
-  padding: 1%;
+  padding: 1% 2%;
   background-color: #0B2240;
   color: white;
+}
+#dateform {
+  display: flex;
+  justify-content: left;
+  margin-top: 6%;
+}
+[type="date"] {
+  color:#0B2240;
+  border-radius: 5px;
+  border-color:#15437F;
+}
+#dateform button {
+  background:#0B2240;
+  border-radius: 5px;
+  padding:5px;
+  color:white;
 }
 [class="fa fa-check"] {
   color: green;
 }
 [class="fa fa-thumbs-up"] {
-  color: yellow;
+  color: blue;
 }
 [class="fa fa-thumbs-down"] {
   color: red;
@@ -205,21 +246,41 @@ h3 a {
   text-decoration: none;
   color:#0B2240;
 }
-#file {
+#file-div {
   display: flex;
   justify-content: center;
   margin-top: 20px;
 }
+#file-div label {
+  background: #fff;
+  padding: 10px;
+  border: solid 1px #0B2240;
+  border-radius: 5px;
+  display: table;
+  color: #0B2240;
+  margin-bottom: 1em;
+}
+
+[type="file"] {
+  display: none;
+}
 textarea {
   border-radius: 10px;
   resize: none;
-  width: 80%;
-  margin-left: 10%; 
+  width: 99%;
 
 }
 .description-p-textarea, .date-p-textarea {
   background-color: #0B2240;
   color: white;
+  padding: 5px;
+  border-radius:5px;
+  margin-bottom: 1%;
+}
+.date-div input, textarea {
+  padding: 5px;
+  border-radius:5px;
+  border-color:#15437F;
 }
 .textarea-div, .date-div {
   margin-left: 10%;
@@ -238,20 +299,36 @@ textarea {
   background-color: #0B2240;
   color: white;
 }
-.col-1 {
-  flex: 1;
+.footer-media {
+  display: flex;
+  list-style-type: none;
+  margin-left: 30%;
+  margin-right: 30%;
+  justify-content: space-between;
+  font-size: 2em;
 }
-.col-2 {
-  flex: 2;
+.footer-media > li:first-child {
+  font-size: 0.7em;
+  padding: 4% 2% 2% 0;
 }
-.col-3 {
-  flex: 3;
+html, body {
+  height: 100%;
 }
-.col-12 {
-  flex: 12;
-  color: rgb(115, 14, 197);
+#addrequest-h2 {
+  margin-top: 5%;
+  margin-bottom: 2%;
 }
-@media only screen and (max-width: 768px) {
+#detail-card {
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+footer {
+  background-color:#15437F;
+  padding-bottom: 4%;
+  padding-top: 2%;
+  color: white;
+}
+@media only screen and (max-width: 676px) {
   .nav a {
     font-size: 80%;
     
@@ -266,4 +343,36 @@ textarea {
     color:#505152;
     height: auto;
   }
+  .welcome-div {
+    max-height: 350px;
+    background-image: url("../image/repair1.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+@media(min-width:300px) and (max-width: 360px) {
+  .nav a {
+    font-size: 68%;
+  }
+  .welcome-div h1{
+    margin-top: 55%;
+    margin-bottom: 3%;
+  }
+}
+@media(min-width:580px) and (max-width: 700px) {
+  .card {
+    flex: 1 0 200px;
+    max-width: 300px;
+    margin: 5px;
+  }
+  #addrequest-h2 {
+    font-size: 100%;
+  }
+}
+@media(min-width:768px) and (max-width: 850px) {
+  .welcome-div {
+  background-repeat: no-repeat;
+  background-size: contain;
+  }
+}
 }
