--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -153,7 +153,7 @@ body {
 .card {
   flex: 0 1 24%;
   background: white;
-  border: solid 1px rgb(73, 73, 182);
+  border: solid 2px #0B2240;
   border-radius:5px;
   color:#505152;
   height: auto;
