--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -7,26 +7,29 @@
   color: #0B2240;
   margin-top: 15%;
 }
+#messageText {
+  color: red;
+  text-align: center;
+}
 #home-logo {
   text-shadow: 4px 4px 8px rgb(46, 139, 216);
   color: #0B2240;
+  font-size: 300%;
 }
 hr {
   color: red;
   margin: 0 5%;
   background: yellow;
 }
-#home-dropdown {
-  color: black;
-  /* margin: 5%; */
-  display: inline-flex;
-  justify-content: center;
-  width: 100%;
+#sort-by {
+  margin: 0 3%;
+  display: flex;
+  justify-content: space-between;
 }
-#home-dropdown select {
+#sort-by select {
   color:#15437F;
   background: white;
-  border:solid  #0B2240 5px;
+  border:solid  #0B2240 6px;
   border-radius: 5px;
 }
 .welcome-div {
@@ -91,7 +94,31 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
+.form-container {
+  border: solid 3px #15437F;
+  margin: 5% 25%;
+  padding: 2% 0;
+  border-radius: 2%;
+  background: #15437F;
+}
+.status-container {
+  display: flex;
+  list-style: none;
+  height: auto;
+}
+.status-item {
+  flex: 1;
+  list-style: none;
+}
+.status-start {
+  justify-content: flex-start;
+}
+.status-end {
+  justify-content: flex-end;
+}
+#welcome-text {
+  margin: 0 20%;
+}
 .container * {
   box-sizing: border-box;
 }
@@ -117,7 +144,7 @@ body {
   padding: 8px;
   font-weight: 900;
   letter-spacing: .09em;
-  color: #15437F;
+  color: white;
 }
 
 .flex-outer > li > label {
@@ -132,6 +159,7 @@ body {
 .flex-outer li input {
   padding: 15px;
   border: solid 2px #15437F;
+  border-radius: 8px;
 }
 
 .flex-outer li button {
@@ -149,17 +177,30 @@ body {
   justify-content: space-between;
   margin: 5%;
   margin-top: 0;
+  background: #0B2240;
+}
+.mini-card {
+  width: 256px;
+  height: 256px;
+  color: white;
+}
+.mini-card-text {
+  text-align: center;
+  font-size: 8em;
+  background: white;
+  color: #0B2240;
+  border-radius: 6px;
 }
 .card {
   flex: 0 1 24%;
-  background: white;
+  background: #15437F;
   border: solid 1px rgb(73, 73, 182);
   border-radius:5px;
-  color:#505152;
+  color:white;
   height: auto;
 }
 .card h3 {
-  color: #0B2240;
+  color: white;
 }
 .card-content {
   padding: 5px;
@@ -167,23 +208,26 @@ body {
 }
 .container form {
   margin-top: 3%;
-  margin-bottom: 30%;
+  margin-bottom: 20%;
 }
 #request-header {
-  margin-left: 5%;
-  margin-top: 5%;
-  color: black;
-}
-img {
-	display: block;
-	border: 0;
-	width: 100%;
-  height: auto;
-  
+  margin-left: 3%;
+  margin-top: 3%;
+  margin-bottom: 2%;
+  color: rgb(52, 61, 145);
+  font-weight: bold;
+  font-size: 150%;
 }
 .show-detail-card {
   margin: auto;
   justify-content: center;
+  background: white;
+  display: flex;
+  height: auto;
+}
+.show-detail-card img {
+  border: solid 1px rgb(73, 73, 182);
+  border-radius:5px;
 }
 .description-card {
   margin:0 10%;
@@ -217,24 +261,25 @@ img {
   background-color: #0B2240;
   color: white;
 }
-#dateform {
-  display: flex;
-  justify-content: left;
-  margin-top: 6%;
-}
 [type="date"] {
   color:#0B2240;
   border-radius: 5px;
   border-color:#15437F;
 }
-#dateform button {
+#sort-date button, .status-container button {
   background:#0B2240;
   border-radius: 5px;
   padding:5px;
   color:white;
 }
+#sort-date button:hover, .status-container button:hover {
+  background-color: rgb(169, 71, 214);
+}
 [class="fa fa-check"] {
   color: green;
+}
+[class="fa fa-pause"] {
+  color: orange;
 }
 [class="fa fa-thumbs-up"] {
   color: blue;
@@ -242,19 +287,34 @@ img {
 [class="fa fa-thumbs-down"] {
   color: red;
 }
+#status-text {
+  background-color: #15437F;
+  border-radius: 5px;
+  margin: 2% 35%;
+  color: white;
+}
+#status-header {
+  padding: 5px;
+  margin: 0 20%;
+  background-color: #15437F;
+  border-radius: 15px;
+  color: white;
+  font-size: 150%;
+  font-weight: bold;
+}
+#login-text {
+  color: white;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
 h3 a {
   text-decoration: none;
-  color:#0B2240;
+  color:white;
 }
 #file-div {
   display: flex;
   justify-content: center;
   margin-top: 20px;
-}
-#messageText{
-  text-align: right;
-  color: rgb(236, 55, 55);
-  margin-top: 9%;
 }
 #file-div label {
   background: #fff;
@@ -275,21 +335,124 @@ textarea {
   width: 99%;
 
 }
-.description-p-textarea, .date-p-textarea {
+.status-div {
+  color:  #15437F;
+  border: solid rgb(135, 184, 248);
+  border-radius: 10px;
+  background-color: rgb(135, 184, 248);
+  margin: 0 20%  4%  20%;
+}
+.status {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between;
+  margin: 0 5%;
+}
+.status li {
+margin: 1em 0;
+}
+.description-p-textarea, .category-p-textarea, .title-p-textarea {
   background-color: #0B2240;
   color: white;
   padding: 5px;
   border-radius:5px;
   margin-bottom: 1%;
 }
-.date-div input, textarea {
+.category-div select, textarea, input {
   padding: 5px;
   border-radius:5px;
   border-color:#15437F;
 }
-.textarea-div, .date-div {
+.textarea-div, .category-div {
   margin-left: 10%;
   margin-right: 10%;
+}
+.category-div {
+padding-bottom: 1%;
+}
+#get-started {
+  margin: 5%;
+  display: flex;
+  justify-content: center;
+  font-size: 170%;
+}
+#get-started a {
+  background: #0B2240;
+  color: white;
+  padding: 3px 20px;
+  border-radius: 25px;
+  text-decoration: none;
+}
+.underline {
+  text-decoration: underline;
+}
+table {
+  display: block;
+  justify-content: center;
+  margin: 7% 3%;
+  margin-top: 2%;
+  overflow: auto;
+}
+td {
+  padding: 5px;
+  border-bottom: solid 1px #15437F;
+}
+th {
+  background: #0B2240;
+  color: white;
+  text-align: center;
+  border: solid #0B2240;
+  border-radius: 6px;
+}
+tr {
+  text-align: justify;
+}
+tr th:nth-child(1) {
+  width: 15%;
+}
+tr th:nth-child(2) {
+  width: 50%;
+}
+tr td:nth-child(1) {
+  white-space: nowrap;
+}
+tr td:nth-child(2) {
+  white-space: nowrap;
+}
+tr td:nth-child(5) {
+  text-align: center;
+}
+tr td:nth-child(4) {
+  white-space: nowrap;
+}
+tr th:nth-child(3) {
+  width: 10%;
+  padding: 0 5px;
+}
+tr th:nth-child(4) {
+  width: 15%;
+}
+tr th:nth-child(5) {
+  width: 10%;
+}
+table a:hover {
+color: red;
+}
+.listing1 ul li {
+  display: inline-flex;
+}
+.listing {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+#how-it-works {
+  padding: 5px;
+  margin-bottom: 3%;
+  background-color: #15437F;
+  color: white;
+  font-size: 150%;
+  font-weight: bold;
 }
 #request-btn {
   display: flex;
@@ -336,16 +499,54 @@ footer {
 @media only screen and (max-width: 676px) {
   .nav a {
     font-size: 80%;
-    
   }
-
+  #sort-by {
+    flex-wrap: wrap;
+    font-size: 80%;
+  }
+  tr th:nth-child(2), tr td:nth-child(2), tr th:nth-child(3), tr td:nth-child(3) {
+    display: none;
+  }
+  th {
+    font-size: 90%;
+  }
+  tr {
+    text-align: center;
+    font-size: 95%;
+  }
+  tr td:nth-child(1) {
+    text-align: justify;
+  }
+  .form-container {
+    margin: 10% 5%;
+    padding: 2% 0;
+  }
+  #welcome-text {
+    margin: 0 5%;
+  }
+  #status-text {
+    border-radius: 5px;
+    margin: 2% 2%;
+    color: white;
+  }
+  #status-header {
+    padding: 5px;
+    margin: 0 10%;
+    border-radius: 15px;
+    font-size: 100%;
+    font-weight: bold;
+  }
+  .status-div {
+    margin: 0 10%  4%  10%;
+  }
+  #get-started {
+    font-size: 120%;
+  }
   .card {
     flex: 1 0 300px;
     margin: 5px;
-    background: white;
     border: solid 1px rgb(73, 73, 182);
     border-radius:5px;
-    color:#505152;
     height: auto;
   }
   .welcome-div {
@@ -359,9 +560,26 @@ footer {
   .nav a {
     font-size: 68%;
   }
+  #sort-by {
+    font-size: 75%;
+  }
+  .form-container {
+    margin: 10% 2%;
+    padding: 2% 0;
+  }
   .welcome-div h1{
     margin-top: 55%;
     margin-bottom: 3%;
+  }
+  #status-header {
+    padding: 5px;
+    margin: 0 5%;
+    border-radius: 15px;
+    font-size: 100%;
+    font-weight: bold;
+  }
+  .status-div {
+    margin: 0 5%  4%  5%;
   }
 }
 @media(min-width:580px) and (max-width: 700px) {
@@ -373,11 +591,30 @@ footer {
   #addrequest-h2 {
     font-size: 100%;
   }
+  #status-header {
+    padding: 5px;
+    margin: 0 5%;
+    border-radius: 15px;
+    font-size: 100%;
+    font-weight: bold;
+  }
+  .status-div {
+    margin: 0 5%  4%  5%;
+  }
 }
 @media(min-width:768px) and (max-width: 850px) {
   .welcome-div {
   background-repeat: no-repeat;
   background-size: contain;
   }
-}
+  #status-header {
+    padding: 5px;
+    margin: 0 15%;
+    border-radius: 15px;
+    font-size: 100%;
+    font-weight: bold;
+  }
+  .status-div {
+    margin: 0 15%  4%  15%;
+  }
 }
