feat(client): implement filtering
- enable filtering by category
- enable filtering by status

[Finishes #158305363]

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -417,6 +417,8 @@ th {
   text-align: center;
   border: solid #0B2240;
   border-radius: 6px;
+  padding-right: 4px;
+  padding-left: 4px;
 }
 tr {
   text-align: justify;
