--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -266,7 +266,7 @@ body {
 }
 #userWelcomeText{
   text-align: right;
-  padding: 5px 40px;
+  padding: 5px 3%;
   font-size: 85%;
 }
 .description-p {
@@ -425,6 +425,10 @@ padding-bottom: 1%;
   display: flex;
   justify-content: center;
   font-size: 170%;
+}
+#get-started a:hover {
+  color: #0B2240;
+  background: white;
 }
 #get-started a {
   background: #0B2240;
