--- a/vanilla/assets/css/main.css
+++ b/vanilla/assets/css/main.css
@@ -620,6 +620,10 @@ th {
 tr {
   text-align: justify;
 }
+tr:nth-child(even) {
+  /* background-color: rgb(241, 247, 255); */
+  background-color: rgb(240, 244, 248);
+}
 td:first-letter {
   text-transform: uppercase;
 }
