chore(integration): setup Circle CI
- add config file for circle CI

[Finishes #161091367]

--- a/vanilla/assets/css/main.css
+++ b/vanilla/assets/css/main.css
@@ -186,6 +186,7 @@ body {
 .counter {
   margin-left: 1%;
   color: rgb(44, 133, 160);
+  font-size: 90%;
 }
 .loader {
   margin: 20px auto;
@@ -621,7 +622,6 @@ tr {
   text-align: justify;
 }
 tr:nth-child(even) {
-  /* background-color: rgb(241, 247, 255); */
   background-color: rgb(240, 244, 248);
 }
 td:first-letter {
