ch(test) increase test coverage
- update test to increase coverage

--- a/vanilla/assets/css/main.css
+++ b/vanilla/assets/css/main.css
@@ -344,12 +344,15 @@ border-radius: 9px;
   margin: 5%;
   margin-bottom: 0;
   margin-top: 0;
-  background: #0B2240;
 }
 .mini-card {
   width: 256px;
   height: 256px;
   color: white;
+}
+.mini-card-text:hover {
+  font-size: 9em;
+  transition: 0.5s;
 }
 .mini-card-text {
   text-align: center;
@@ -361,7 +364,6 @@ border-radius: 9px;
 .card {
   flex: 0 1 24%;
   background: #15437F;
-  border: solid 1px rgb(73, 73, 182);
   border-radius:5px;
   color:white;
   height: auto;
@@ -452,17 +454,20 @@ border-radius: 9px;
   border-radius: 5px;
   border-color:#15437F;
 }
-#filter-by [type="date"] { 
+#filter-by [type="date"] {
   height: 30px;
   }
 #filter-date button, .status-container button {
   background:#0B2240;
   border-radius: 5px;
-  padding:5px;
+  padding:5px 10px;
   color:white;
 }
-#filter-date button:hover, .status-container button:hover {
-  background-color: #15437F;
+ .status-container button:hover {
+  background-color:#021227;
+  font-size: 110%;
+  transition: 0.5s;
+  padding-right: 20px;
 }
 [class="fa fa-check"] {
   color: green;
